Thu Oct 29 22:13:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Updated disjoint sequence to be inclusive; added missing
          inline on global operators.

Wed Oct 28 22:57:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Initial implementation of disjoint sequence tracking for
          forthcoming updates to wait_for_acknowledgements and
          coherent_access.

Fri Oct 23 22:40:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:

          Updated documentation for next release.

Fri Oct 23 19:58:26 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * OpenDDS version 2.0.1 released.

Fri Oct 23 19:53:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:

          Updated documentation for next release.

Wed Oct 21 17:34:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Remoted temporary forward decls in ast_visitor impl; obviated
          by TAO 1.7.4 release.

Tue Oct 20 01:36:51 UTC 2009  Scott Harris  <harris_s@ociweb.com>

        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/publisher/TestDriver.h

          Fix build against SunCC with STLport.

Fri Oct 16 18:35:38 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest4/Reader.cpp:

          Fixed access violation on zero length SampleInfoSeq
          returned from read_next_instance or take_next_instance.

Tue Oct 13 22:45:56 UTC 2009  Scott Harris  <harris_s@ociweb.com>
